--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ GENERATE_SOURCEMAP = false
 
 ## Public URL
 
-REACT_APP_API_BASE_URL=http://localhost:8000
+REACT_APP_API_BASE_URL=https://task-manger-backend-b500.onrender.com
 
 
